syntax = "proto3";

package pb;

option go_package = "../pb";

message ChainMeta {
    uint64 height = 1;
    bytes block_hash = 2;
    bytes gas_price = 3;
}

message TransactionMeta {
    bytes block_hash = 1;
    uint64 block_height = 2;
    uint64 index = 3;
}
